launchtemplateniklas.yaml
---

Parameters:
  ImageId:
    Type: String
    Description: 'Linux 2 AMI for Ireland eu-west1 Region'
    Default: 'ami-0c1bc246476a5572b'
  InstanceType:
    Type: String
    Description: Choosing t2 micro because it is free
    Default: t2.micro
  Key1:
    Description: SSH Keypair to login to the instance
    Type: AWS::EC2::KeyPair::KeyName
    Default: key1
  Snet1:
    Description: Subnet1 ID
    Type: String
    Default: subnet-00a52f2365b335e45
  Snet2:
    Description: Subnet1 ID
    Type: String
    Default: subnet-06214732dec4ac159	
  Snet3:
    Description: Subnet1 ID
    Type: String
    Default: subnet-0a59b2fb9b98b7bc7

AWSTemplateFormatVersion: 2010-09-09
Resources:
  LaunchTemplateNiklas:
    Type: 'AWS::EC2::LaunchTemplate'
    Properties:
      LaunchTemplateName: !Sub '${AWS::StackName}-launch-template-for-auto-scaling'
      LaunchTemplateData:
        SecurityGroupIds:
          - !GetAtt HTTPSecGroup.GroupId
          - !GetAtt SSHSecGroup.GroupId
        ImageId: !Ref ImageId
        InstanceType: !Ref InstanceType
        KeyName: !Ref Key1
        UserData:
          Fn::Base64: 
            !Sub |
              #!/bin/bash
              yum update -y
              amazon-linux-extras install nginx1 -y
              systemctl start nginx
              systemctl enable nginx
              echo whazzaaaaaa!!!! from $(hostname -f) > /usr/share/nginx/html/index.html

  HTTPSecGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: SG to allow HTTP access via port 80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  SSHSecGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: SG to allow SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: '0.0.0.0/0'
          
  AutoscalingGroup1:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref LaunchTemplateNiklas
        Version: !GetAtt LaunchTemplateNiklas.LatestVersionNumber
      MaxSize: '3'
      MinSize: '1'
      DesiredCapacity: '1'
      VPCZoneIdentifier:   
        - !Ref Snet1
        - !Ref Snet2
        - !Ref Snet3
      MetricsCollection: 
        - Granularity: "1Minute"
          Metrics: 
            - "GroupMinSize"
            - "GroupMaxSize"
      # Tags:
      #   - Key: Environment
      #     Value: Production
      #     PropagateAtLaunch: "true"
      #   - Key: Purpose
      #     Value: WebServerGroup
      #     PropagateAtLaunch: "false"
